# claude-busy-monitor

./: .gitignore  CEREMONIES.md  CHANGES.md  CLAUDE.md  HOWTO-PUBLISH.md  LICENSE  Makefile  README-LIBRARY.md  README-STATE-DETECTION.md  README.md  TODO.md  claude_busy_monitor.py  pyproject.toml
.claude/: settings.json
.claude/hooks/: bash-main-task-commit-block.sh  bash-missing-trailer-warn.sh  config.env  edit-claude-md-length-warn.sh  edit-missing-metadata-warn.sh  edit-pending-marker-require.py  edit-trailing-whitespace-warn.sh  edit-uncommitted-attest-block.sh  hook_config.py  save-md-prettier-run.sh  session-start-venv-activate.sh  test_hooks.py
architecture/devlog/: 0001-build-skeleton.md  0003-split-monolith.md  0005-test-scaffold.md  0007-readme-polish.md  0009-pypi-publish.md  0011-makefile-quality-gate.md  0017-zero-count-badge-colour.md  0021-detect-shell-status.md  CLAUDE.md
scripts/: publish-preflight.sh  publish-tag.sh
src/claude_busy_monitor/: __init__.py  _cli.py  _core.py  _sessions.py
tests/: test_smoke.py
tests/e2e/: conftest.py  test_classifier_observes_mocked_sessions.py  test_classifier_observes_real_concurrent_sessions.py
tests/smoke/: test_cli_exits_zero.py  test_install_legacy_roundtrip.py  test_publish_preflight.py  test_version_matches_changes.py
tests/unit/: test_active_jsonl_resolution.py  test_cli_version.py  test_probe_parsing.py  test_state_counts.py  test_state_map.py  test_token_stats.py
